package com.example.application.configs;

/**
 * Класс Const служит для связи с конкретной
 * таблицей, полями этой таблицы и т.д.
 */
public class Const {
    /**
     * Поля для обращения к полям базы данных
     */
    public static final String USER_TABLE = "users";
    public static final String USER_ID = "idUsers";
    public static final String USER_FIRSTNAME = "firstName";
    public static final String USER_MIDDLE_NAME = "middleName";
    public static final String USER_LASTNAME = "lastName";
    public static final String USER_USERNAME= "userName";
    public static final String USER_PASSWORD = "password";
    public static final String USER_LOCATION = "location";
    public static final String USER_GENDER = "gender";
    public static final String USER_TELEPHONE = "telephone";
    public static final String USER_SERIES_NUMBER_PASSPORT = "seriesNumberPassport";
    public static final String USER_SNILS = "SNILS";
    public static final String USER_INN = "INN";
}
