package com.example.application.configs;

/**
 * Класс Operation служит для конкретных
 * операций с БД
 */
public enum Operation {
    ADD_USER,
    GET_USER,
    GET_FULL_USER,
}
